tests/spec/emit/snapshots/tail_panic_in_result_returning_function.snap
---
source: tests/spec/emit/result_option_patterns.rs
description: "input: \nfn forbidden() -> Result<int, error> {\n  panic(\"boom\")\n}\n"
---
package main

func forbidden() (int, error) {
	panic("boom")
}
