tests/spec/emit/snapshots/tail_return_of_wrap_err_on_go_call.snap
---
source: tests/spec/emit/result_option_patterns.rs
description: |
  
  import "go:fmt"
  import "go:strconv"
  
  fn port(raw: string) -> Result<int, error> {
    strconv.Atoi(raw).wrap_err("read port")
  }
  
  fn main() {
    fmt.Println(port("8080"))
  }
---
package main

import (
	"fmt"
	lisette "github.com/ivov/lisette/prelude"
	"strconv"
)

func port(raw string) (int, error) {
	ret, err := strconv.Atoi(raw)
	if err != nil {
		return 0, fmt.Errorf("read port: %w", err)
	}
	return ret, nil
}

func main() {
	fmt.Println(lisette.ResultFromPair[int](port("8080")))
}
