tests/spec/emit/snapshots/task_block_followed_by_return.snap
---
source: tests/spec/emit/concurrency.rs
description: |
  
  import "go:fmt"
  
  fn test() -> int {
    task {
      fmt.Print("background");
    };
    100
  }
---
package main

import "fmt"

func test() int {
	go func() {
		fmt.Print("background")
	}()
	return 100
}
