tests/spec/emit/snapshots/task_block_variable_shadowing.snap
---
source: tests/spec/emit/concurrency.rs
description: |
  
  import "go:fmt"
  
  fn main() {
    let x = 1
    fmt.Println(x)
    task {
      let x = 2
      fmt.Println(x)
      let x = 3
      fmt.Println(x)
    }
  }
---
package main

import "fmt"

func main() {
	x := 1
	fmt.Println(x)
	go func() {
		x := 2
		fmt.Println(x)
		x_1 := 3
		fmt.Println(x_1)
	}()
}
