tests/spec/emit/snapshots/task_captures_reassigned_local_before_the_goroutine_runs.snap
---
source: tests/spec/emit/concurrency.rs
description: |
  
  fn test() {
    let mut xs = [1]
    task xs.length()
    xs = [1, 2]
  }
---
package main

func test() {
	xs := []int{1}
	arg := xs
	go func() {
		_ = len(arg)
	}()
	xs = []int{1, 2}
}
