tests/spec/emit/snapshots/task_channel_send.snap
---
source: tests/spec/emit/concurrency.rs
description: |
  
  fn test() {
    let ch = Channel.new<int>();
    task ch.send(42)
  }
---
package main

import lisette "github.com/ivov/lisette/prelude"

func test() {
	ch := make(chan int)
	go lisette.ChannelSend(ch, 42)
}
