tests/spec/emit/snapshots/task_go_multi_return_call.snap
---
source: tests/spec/emit/concurrency.rs
description: |
  
  import "go:fmt"
  
  fn main() {
    task fmt.Println("hello")
  }
---
package main

import "fmt"

func main() {
	go fmt.Println("hello")
}
