tests/spec/emit/snapshots/task_go_nullable_return_call.snap
---
source: tests/spec/emit/concurrency.rs
description: |
  
  import "go:html/template"
  
  fn main() {
    let t = template.New("x")
    task t.Lookup("x")
  }
---
package main

import "html/template"

func main() {
	t := template.New("x")
	go t.Lookup("x")
}
